Bug 207571 - TI PCIe-to-PCI Bridge ASPM L1 is not enabled, prevent SoC reaching deeper Package C-State > PC3
Summary: TI PCIe-to-PCI Bridge ASPM L1 is not enabled, prevent SoC reaching deeper Pac...
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: PCI (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_pci@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-04 06:35 UTC by Kai-Heng Feng
Modified: 2020-06-02 09:37 UTC (History)
1 user (show)

See Also:
Kernel Version: mainline
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (72.54 KB, text/plain)
2020-05-04 06:36 UTC, Kai-Heng Feng
Details
lspci under Windows (30.58 KB, text/plain)
2020-05-04 06:37 UTC, Kai-Heng Feng
Details
lspci under Linux (43.01 KB, text/plain)
2020-05-04 06:41 UTC, Kai-Heng Feng
Details
lspci -t (395 bytes, text/plain)
2020-05-04 06:41 UTC, Kai-Heng Feng
Details

Description Kai-Heng Feng 2020-05-04 06:35:46 UTC
The device in question prevent the Intel SoC from entering deeper Package C-State like PC8, hence consumes unnecessary high power.
Comment 1 Kai-Heng Feng 2020-05-04 06:36:10 UTC
Created attachment 288883 [details]
dmesg
Comment 2 Kai-Heng Feng 2020-05-04 06:37:16 UTC
Created attachment 288885 [details]
lspci under Windows

ASPM L1 is enabled under Windows.
Comment 3 Kai-Heng Feng 2020-05-04 06:41:14 UTC
Created attachment 288887 [details]
lspci under Linux
Comment 4 Kai-Heng Feng 2020-05-04 06:41:54 UTC
Created attachment 288889 [details]
lspci -t
Comment 5 juan 2020-05-22 11:30:08 UTC
is this related to the Samsung SSD bug?
https://bugs.launchpad.net/ubuntu/+source/linux/+bug/1746340
Comment 6 Kai-Heng Feng 2020-05-22 11:36:53 UTC
No it's unrelated.
Comment 7 Kai-Heng Feng 2020-06-02 09:37:16 UTC
commit 66ff14e59e8a30690755b08bc3042359703fb07a
Author: Kai-Heng Feng <kai.heng.feng@canonical.com>
Date:   Wed May 6 01:34:21 2020 +0800

    PCI/ASPM: Allow ASPM on links to PCIe-to-PCI/PCI-X Bridges

Note You need to log in before you can comment on or make changes to this bug.